refactor(ingest-infra): 将持久化层从 MyBatis-Plus 迁移到 JPA
使用 Spring Data JPA 替换 MyBatis-Plus，重构持久化层结构：
- Entity 类使用 JPA 注解（@Entity、@Table、@Column）
- JpaMapper 取代 Converter 实现领域与实体对象转换
- JpaRepository (Dao) 取代 MyBatis Mapper 接口
- 更新所有 RepositoryAdapter 适配新的 JPA 组件